ctui-components/src/snapshots/ctui_components__gauge__tests__gauge_full.snap
---
source: ctui-components/src/gauge.rs
expression: result
---
               
  ░░█████████  
 ░░░░█ █ █████ 
 ░░░░  █  ████ 
 ░░░░100%█████
