ctui-components/src/snapshots/ctui_components__gauge__tests__gauge_half.snap
---
source: ctui-components/src/gauge.rs
expression: result
---
               
  ░░█████████  
 ░░░░█ █ █████ 
 ░░░░  █  ████ 
 ░░░░░50%░░░░░
