ctui-components/src/snapshots/ctui_components__gauge__tests__gauge_with_label.snap
---
source: ctui-components/src/gauge.rs
expression: result
---
               
  ░░█████████  
 ░░░░█ █ █████ 
 ░░░░  █  ████ 
 ░░░░Speed████
