ctui-components/src/snapshots/ctui_components__gauge__tests__linear_gauge.snap
---
source: ctui-components/src/gauge.rs
expression: result
---
████████████░░░░░░░░
        60%
